kustomize/overlay/mini/ingresses/ingress-login-allinformatix-com.yaml
# kustomize/overlay/mini/ingresses/patch-ingress-login-allinformatix-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-login-allinformatix-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: login.allinformatix.com
  tls:
    - hosts:
        - login.allinformatix.com
      secretName: sslcert-login-allinformatix-com
